-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.148 2007-11-15 04:40:16 remko Exp $
-----------------------------------------------------------------------------------------

2007-11-14	remko
	* guru/gmtguru.macros.orig:	Settings are now only included in GNUmakefile.
				Version information has moved to configure.in.
	* GNUmakefile:		Has become the only makefile to include gmtguru.macros*
	* */GNUmakefile:	Removed includes of guru/gmtguru.macros*. Information now comes
				from src/makegmt.macros.
	* gmt_version.h.in:	New: template for versioning info in source and manpages.
	* doc/GMT_version.tex.in:	New: template for versioning info in documentation.
	* common_options.txt:	Now includes gmt_version.h to get version info.
	* *.txt:		Now include common_options.txt at the very start.
	* doc/GNUmakefile:	Renamed from doc/makefile.
	* test/functions.sh:	Test functions defined in this file to make writing test
				scripts easier.

2007-11-13	remko
	* gmt_grdio.c:		Fixed bug in parsing -D option from e.g. grdedit. Would always
				see 0 as separator (along with /).
	* gmt_support.c:	Removed strncpy from GMT_strtok. No consequence on function.
	* grdinfo.c:		zmin==zmax no longer forces -M option.
			
2007-11-13	pwessel
	* gmt_map.c:		Minor bug in 4th term in conformal->geodetic lat.
	* pslib.c:		Redefine rect symbol to be less prone to round-off
	* PSL_prologue.ps:	New macro for box symbol
	
2007-11-04	pwessel
	* ps2raster.c:		New option -D<dir> specifies alternative output directory.
				Also added -V for progress reports [Default is silent].
				
2007-11-02	remko
	* gmt_proj.[ch], gmt_project.h, gmt_map.c, gmt_init.c, explain_-J*.txt:
				Added optional horizon to global azimuthal projections (-J[AEGS]),
				also made horizon optional in Gnomonic projection (-JF).

2007-11-01	pwessel
	* gmt_support.c:	In GMT_contour, would occasionally not check internal crossings
				for some interior contours.